samples/_failures_safe/1761169442_11b158_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b6f5ab4.c:185:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  185 | void free
      | ^~~~
